--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,57 @@
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/Background"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.nothio.bucher.MainActivity">
 
-        <ImageView
+        <RelativeLayout
             android:id="@+id/header"
-            android:layout_width="fill_parent"
-            android:layout_height="150dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:scaleType="center"
-            android:src="@drawable/header" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-        <ListView
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:layout_margin="5dp"
+                android:scaleType="fitCenter"
+                android:visibility="gone"></ImageView>
+
+            <TextView
+                android:id="@+id/label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_margin="5dp"
+                android:ellipsize="end"
+                android:gravity="right"
+                android:textColor="@color/SectionHeader"
+                android:textSize="20sp"
+                android:visibility="gone"></TextView>
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/header"
-            android:background="@android:color/transparent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:background="@color/Background"
             android:cacheColorHint="@android:color/transparent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"></ListView>
+            android:divider="@android:color/transparent"
+            android:dividerHeight="3dp"
+            android:listSelector="@android:color/transparent"
+            android:scrollbars="vertical" />
+
     </RelativeLayout>
 </layout>
