--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,6 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/Background"
@@ -56,4 +56,3 @@
         </ScrollView>
 
     </RelativeLayout>
-</layout>
