--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -57,4 +57,3 @@
             android:scrollbars="vertical" />
 
     </RelativeLayout>
-</layout>
