--- a/app/src/main/res/layout/section_row.xml
+++ b/app/src/main/res/layout/section_row.xml
@@ -1,6 +1,6 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/GridItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,4 +44,3 @@
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
-</layout>
